--- a/vignettes_highres/Inbred_Based_Populations.Rmd
+++ b/vignettes_highres/Inbred_Based_Populations.Rmd
@@ -426,6 +426,18 @@ Plotting markers genotypes from the outputted `onemap` object, we can see that t
 plot(comb_example)
 ```
 
+
+# Exporting .raw file from onemap object
+
+The functions `onemap_read_vcfR` generates new onemap objects without use a input `.raw` file. Also, the function `combine_onemap` manipulates the information of the original `.raw` file and creates a new data set. In both cases, you do not have a input file `.raw` that contains the same informations of the analysed data. If you want to create a new input file with the data set you are working after using this functions, you can use the function `write_onemap_raw`.  
+
+```{r, eval=FALSE}
+write_onemap_raw(comb_example, file.name = "new_dataset.raw", cross="f2 intercross")
+```
+
+The file `new_dataset.raw` will be generated in your working directory. In our example, it contains markers from `onemap_example_f2` and `vcf_example_f2` data sets.
+
+
 # Segregation tests
 
 Now, it should be interesting to see if markers are segregating
@@ -504,6 +516,8 @@ To get a list of distorted ones (none in this example):
 ```{r, select_distorted}
 select_segreg(f2_test, distorted = TRUE)
 ```
+
+It is not recommended, but you can define a different threshold value changing the `threshold` argument of the function `select_segreg`. 
 
 For the next steps will be useful to know the numbers of each markers with segregation distortion, so then you can keep those out of your map building analysis. These numbers refer to the lines where markers are located on the data file.
 
@@ -1071,21 +1085,21 @@ According to `CHROM` informations we have three defined linkage groups, now we c
 
 ```{r}
 CHR_mks <- group_seq(input.2pts = twopts_f2, seqs = "CHROM", unlink.mks = mark_all_f2,
-                      rm.repeated = TRUE)
+                      repeated = FALSE)
 ```
 
 The function works as the function `group`, but considering preexisting sequences. Setting `seqs` argument with the string `"CHROM"`, it will considered the preexisting sequences according to `CHROM` information. You can also indicate others preexisting sequences if it make sense for your study. For that, you should inform a list with objects of class `sequences`, as the example:
 
 ```{r, eval=FALSE}
 CHR_mks <- group_seq(input.2pts = twopts_f2, seqs = list(CHR1=CHR1, CHR2=CHR2, CHR3=CHR3), 
-                      unlink.mks = mark_all_f2, rm.repeated = TRUE)
+                      unlink.mks = mark_all_f2, repeated = FALSE)
 ```
 
 In this case, the command had the same effect of the previous, because we indicate chromossome sequences, but others sequences can be used.
-
+ 
 The `unlink.mks` argument receive a object of class `sequence`, this define which markers will be tested to group with the sequences in `seqs`. In our example, we will indicate only the markers with no segregation distortion, using the sequence `mark_no_dist`. It is also possible to use the string `"all"` to test all the remining markers at the `rf_2pts` object. 
 
-In some cases, the same marker can group to more than one sequence, those markers will be considered `repeated`. We can choose if we want to remove or not (`TRUE/FALSE`) them of the output sequences, with the argument `rm.repeated`. Anyway, their numbers will be informed at the list `repeateds` in the output object. 
+In some cases, the same marker can group to more than one sequence, those markers will be considered `repeated`. We can choose if we want to remove or not (`FALSE/TRUE`) them of the output sequences, with the argument `rm.repeated`. Anyway, their numbers will be informed at the list `repeateds` in the output object. 
 In the example case, there are no repeated markers. However, if they exists, it could indicate that their groups actually constitute the same group. Also, genotyping erros can generate repeated markers. Anyway, they deserves better investigations. 
 
 We can access detailed information about the results just printing:
@@ -1446,3 +1460,6 @@ species. **_Theoretical Population Biology_** 61, 349-363, 2002a.
 
 Wu, R., Ma, C.-X., Wu, S. S. and Zeng, Z.-B. Linkage mapping of
 sex-specific differences. **_Genetical Research_** 79, 85-96, 2002b.
+
+
+
