adding warnings for missing data excess

--- a/vignettes/Outcrossing_Populations.Rmd
+++ b/vignettes/Outcrossing_Populations.Rmd
@@ -517,6 +517,8 @@ To use Kosambi
 set_map_fun(type = "kosambi")
 ```
 
+If you do not set one of these functions, the kosambi is used as default.
+
 Now, you must define which linkage group will be mapped. In another
 words, a linkage group must be `extracted` from the object of class
 `group`, in order to be mapped. For simplicity, we will start here
@@ -1191,7 +1193,11 @@ ripple_seq(CHR3_final)
 
 # Drawing the genetic maps
 
-Once all linkage groups were obtained using both strategies, we can draw a simple map for each strategy using the function `draw_map`. 
+Once all linkage groups were obtained using both strategies, we can draw a map for each strategy using the function `draw_map`. Since version 2.1.1007, OneMap a new version of `draw_map`, called `draw_map2`. The new function draws elegant linkage groups, and presents new arguments to personalize your draw.
+
+If you prefer the old function, we also keep it. Follow examples how to use both of them.
+
+## Draw_map
 
 Drawing map builded with only recombinations informations
 
@@ -1242,6 +1248,57 @@ linkage phases are estimated, better map figures can be drawn by the
 user with any appropriate software. There are several free software
 that can be used, such as `MapChart` (Voorrips, 2002).
 
+## Draw_map2
+
+Drawing map builded with only recombinations informations
+
+```{r, echo=TRUE, fig=TRUE}
+draw_map2(LG1_final, LG2_final, LG3_final, data = bins_example)
+```
+
+The figure will be saved in your work directory with the default name `map.eps`. You can change the file name and extension specifing them in the argument `output`. To know which figure extension are available check the function help with `?draw_map2`.
+
+Drawing map builded with reference genome and  recombinations informations
+
+```{r, echo=TRUE, eval=FALSE}
+draw_map2(CHR1_final, CHR2_final, CHR3_final, data = bins_example, output= "map_ref.pdf", 
+          col.group = "#58A4B0",
+         col.mark= "#335C81")
+``` 
+
+![](vignettes/map_ref.pdf)
+
+With the argument `tag`, we can highlight some markers with other color. The arguments `col.group`, `col.mark` and `col.tag` can be changed to personalize the color of the groups, the markers, and the highlighted markers, respctivelly. 
+
+## Parei aqui!
+We also can draw a maps comparing corresponding linkage groups in each strategy:
+
+```{r, width = 9.5, height = 9.5}
+CHR1_comp <- list(LG1_final, CHR1_final)
+draw_map2(LG1_final, CHR1_final, data=bins_example )
+```
+
+Markers `M1` and `SNP2` are in different position between the strategies results for CHR1.
+
+```{r, width = 9.5, height = 9.5}
+CHR2_comp <- list(LG3_final, CHR2_final)
+draw_map(CHR2_comp, names = TRUE, grid = TRUE, cex.mrk = 0.7)
+```
+
+Both strategies produced the same result for CHR2 (the map are only inverted).
+
+```{r, width = 9.5, height = 9.5}
+CHR3_comp <- list(LG2_final, CHR3_final)
+draw_map(CHR3_comp, names = TRUE, grid = TRUE, cex.mrk = 0.7)
+``` 
+
+There are a invertion between markers `SNP17` and `SNP18` and the marker `M29` was removed in te second strategy.
+
+Or groups alone:
+
+```{r}
+draw_map(CHR1_final, names = TRUE, grid = TRUE, cex.mrk = 0.7)
+``` 
 
 # Map estimation for an arbitrary order
 
